--- a/docs/_layouts/category.html
+++ b/docs/_layouts/category.html
@@ -31,10 +31,10 @@
         </ul>
         {% endif %}
 
-        Posts by recent history:<br/>
-        {% for category in site.categories %}
-        <a href="{{ category[0] }}">{{ category[0] }}</a><br/>
-        {% endfor %}
+      {%- assign posts = site.categories | where: "category", page.category -%}
+      {% for post in posts %}
+      - <a href="{{ post.url }}">{{ post.title }}</a><br/>
+      {% endfor %}
 
       </header>
       <section>
@@ -47,7 +47,10 @@
 
       </section>
       <footer>
-        <p class="view"><a href="{{ site.url | append: site.about }}">about</a></p>
+        <!--
+        {% if site.github.is_project_page %}
+        <p class="view">This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}-->
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
