--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
-<p>{{ page.date }}</p>
+<small>{{ page.date | date: "%-d %B %Y" }}</small>
+<h1>{{ page.title }}</h1>
 
-{{ content }}
+<p class="view">by {{ page.author | default: site.author }}</p>
+
+{{content}}
+
+{% if page.tags %}
+  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+{% endif %}
