--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <header>
         {% if site.logo %}
-          <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
+          <a href="{{ "/" | absolute_url }}"><img src="{{ site.baseurl | append: site.logo | relative_url}}" alt="Logo" /></a>
         {% endif %}
 
         <p></p>
@@ -31,27 +31,29 @@
 
         Posts by recent history:<br/>
         {% for category in site.categories %}
-        <a href="{{ category[0] }}">{{ category[0] }}</a><br/>
+        {%- assign catpath = category[0] -%}
+        <a href="{{ catpath | remove: ' ' }}">{{ category[0] }}</a><br/>
         {% endfor %}
 
       </header>
       <section>
-
+<!--
         {% if page.logo %}
         <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
         {% endif %}
+-->
 
         {{ content }}
 
       </section>
       <footer>
-        <p class="view"><a href="{{ site.url | append: site.about }}">about</a></p>
+        <p class="view"><a href="{{ site.baseurl | append: site.about | relative_url }}">about</a></p>
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
       </footer>
     </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <script src="{{ site.baseurl  | append: "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
