--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
-    <link rel="stylesheet" href="{{ css-root | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?' | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <header>
         {% if site.logo %}
-          <a href="{{ "/" | absolute_url }}"><img src="{{ site.baseurl | append: site.logo | relative_url}}" alt="Logo" /></a>
+          <a href="{{ "/" | absolute_url }}"><img src="{{ site.logo | relative_url }}" alt="Logo" /></a>
         {% endif %}
 
         <p></p>
@@ -28,6 +28,11 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        css:
+        {{ site.css }}
+        css-path:
+        {{ site.css-path }}
 
         Posts by recent history:<br/>
         {% for category in site.categories %}
@@ -47,13 +52,14 @@
 
       </section>
       <footer>
-        <p class="view"><a href="{{ append: site.about | relative_url }}">about</a></p>
+        <p class="view"><a href="{{ site.about | relative_url }}">about</a></p>
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
       </footer>
     </div>
-    <script src="{{ site.baseurl  | append: "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <!-- one very frustrating thing that occurs with jekyll on GHP is that site variables automatically get the baseurl applied. -->
+    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
