--- a/docs/_layouts/category.html
+++ b/docs/_layouts/category.html
@@ -13,7 +13,7 @@ layout: default
 <hr>
 
 {% for post in site.categories[page.category] %}
-  {{ post.date | date: "%A, %b %d" }}
+  {{ post.date | date: "%A, %B %d" }}
     <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
   {%- assign extract = post.content | split: "<!--start-->" | last | split: "<!--end-->" | first -%}
   {{ extract | strip_html }}
