--- a/docs/_layouts/category.html
+++ b/docs/_layouts/category.html
@@ -5,7 +5,7 @@ layout: default
 <br/>
 <small>&nbsp;viewing posts by month</small>
 <br/>
-<h1>{{ page.title }}</h1>
+<h1>{{ page.title | downcase }}</h1>
 << previous&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;next >>
 <br/>
 <br/>
@@ -13,7 +13,7 @@ layout: default
 <hr>
 
 {% for post in site.categories[page.category] %}
-  {{ post.date | date: "%A, %B %d" }}
+  {{ post.date | date: "%A, %B %d" | downcase }}
     <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
   {%- assign extract = post.content | split: "<!--start-->" | last | split: "<!--end-->" | first -%}
   {{ extract | strip_html }}
