--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,24 +25,19 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{ site.github.zip_url }}">download <strong>zip</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}">download <strong>tar</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}">view On <strong>github</strong></a></li>
         </ul>
         {% endif %}
 
-        Posts by recent history:<br/>
+        posts by recent history:<br/>
         {% for month in site.month %}
-        <a href="{{ month.url | relative_url }}">{{ month.title }}</a><br/>
+        <a href="{{ month.url | relative_url }}">{{ month.title | downcase }}</a><br/>
         {% endfor %}
 
       </header>
       <section>
-<!--
-        {% if page.logo %}
-        <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
-        {% endif %}
--->
 
         {{ content }}
 
@@ -50,7 +45,7 @@
       <footer>
         <p class="view"><a href="{{ site.about | relative_url }}">about</a></p>
         {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+          <p class="view"><a href="{{ site.github.repository_url }}">view the project on gitHub <small>{{ site.github.repository_nwo | downcase }}</small></a></p>
         {% endif %}
       </footer>
     </div>
