--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -4,9 +4,9 @@ layout: default
 
 <br/>
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
+<h1>{{ page.title | downcase }}</h1>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+<p class="view">by {{ page.author | default: site.author | downcase }}</p>
 
 <hr>
 
