--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -43,10 +43,12 @@
 
       </section>
       <footer>
-        <p class="view"><a href="{{ site.about | relative_url }}">about</a></p>
+        <p class="view"><a href="{{ site.about | relative_url }}">about</a>
+          <hr/>
         {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">view the project on gitHub <small>{{ site.github.repository_nwo | downcase }}</small></a></p>
+          <a href="{{ site.github.repository_url }}">view the project on gitHub <small>{{ site.github.repository_nwo | downcase }}</small></a>
         {% endif %}
+        </p>
       </footer>
     </div>
     <!-- one very frustrating thing that occurs with jekyll on GHP is that site variables automatically get the baseurl applied. -->
