--- a/docs/_layouts/category.html
+++ b/docs/_layouts/category.html
@@ -14,7 +14,7 @@ layout: default
 
 {% for post in site.categories[page.category] %}
   {{ post.date | date: "%A, %B %d" | downcase }}
-    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    <h3><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
   {%- assign extract = post.content | split: "<!--start-->" | last | split: "<!--end-->" | first -%}
   {{ extract | strip_html }}
   <p></p>
