fixing badly copied text on previous link

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
 {% if page.next %}
 <div class="previous">
-  <a href="{{ page.next.url | relative_url }}">{{ next >> }}</a>
+  <a href="{{ page.next.url | relative_url }}">{{ << previous }}</a>
 </div>
 {% endif %}
 
